--- a/AUTHORS
+++ b/AUTHORS
@@ -11,11 +11,14 @@ alphabetical order:
 +----------------------------+--------------------+--------------------------+----------------+
 | `Tav`_                     | tav                | tav@espians.com          | U.K.           |
 +----------------------------+--------------------+--------------------------+----------------+
+| `Donovae`_                 | Donovae            | bailly.herve@gmail.com   | Fr             |
++----------------------------+--------------------+--------------------------+----------------+
 
 .. Please keep the listing in Alphabetical Order, thanks!
 
 .. _James Arthur: http://thruflo.com
 .. _Tav: http://tav.espians.com
+.. Donovae: http://www.donovae.com
 
 By adding yourself to this list, you explicitly agree to affirm all of your
 Contributions to WikiHouse ("The Work") to be covered by the Unlicense found in
